[Enhancement #231] Fix issues caused by introducing lazy loading proxies (WIP).